Fri Nov 25 15:06:43 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_interface_header.cpp:
        
          Applied a patch submitted by Max Khon <mkhon@swsoft.com>
          to fix a bug in computing the inheritance list of an IDL
          interface. This fix closes [BUGID:2318].

Fri Nov 25 13:01:23 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/ImplRepo/run_test.pl:

          Added time parameter to WaitKill to fix spurious test error.

Fri Nov 25 11:18:12 2005  Simon McQueen  <sm@prismtech.com>

        * orsbvcs/tests/Bug_2074_Regression/run_test.pl:

          Correct the use lib path to give this a sporting chance.
          Can't have ever been run from this location.

Thu Nov 24 19:50:35 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.h:

          Override the base class ::decode method with one that
          doesn't try and extract an object key from the CDR encoding.
          MIOP profiles don't have an object key marshalled between
          the address info and the tagged components.

          This fixes bug #2316.

        * orbsvcs/tests/Bug_2316_Regression/Bug_2316_Regression.mpc:
        * orbsvcs/tests/Bug_2316_Regression/README:
        * orbsvcs/tests/Bug_2316_Regression/Test.idl:
        * orbsvcs/tests/Bug_2316_Regression/Test_impl.cpp:
        * orbsvcs/tests/Bug_2316_Regression/Test_impl.h:
        * orbsvcs/tests/Bug_2316_Regression/client.cpp:
        * orbsvcs/tests/Bug_2316_Regression/run_test.pl:
        * orbsvcs/tests/Bug_2316_Regression/server.cpp:
        * orbsvcs/tests/Bug_2316_Regression/svc.conf:

          Regression test for the above.

Thu Nov 24 19:07:56 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp:

          Fix calculation of protocol name length. This fixes the